--- a/turbolinks_verification/package.json
+++ b/turbolinks_verification/package.json
@@ -1,21 +1,17 @@
 {
-  "name": "swiper-app",
+  "name": "turbolinks-verification",
   "private": true,
   "dependencies": {
-    "@babel/plugin-proposal-private-methods": "^7.18.6",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.4.4",
-    "jquery": "^3.7.1",
-    "swiper": "9.4.1",
+    "@rails/webpacker": "5.4.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3"
+    "webpack-dev-server": "^3.11.2"
   }
 }
